Add S3 Object Storage support
File upload now support S3 compatible object storage.

Signed-off-by: Pierre Belloy <p.belloy@axelor.com>